--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,8 +16,9 @@
     "clean": "rm -rf dist *.tsbuildinfo"
   },
   "dependencies": {
-    "@gasport/sdk": "workspace:*",
+    "@gasport/core": "workspace:*",
     "@gasport/types": "workspace:*",
+    "viem": "^2.7.1",
     "commander": "^11.1.0",
     "inquirer": "^9.2.12",
     "chalk": "^5.3.0",
